<resources>
    <string name="app_name">Juego de la Memoria</string>
    <string name="Registro">Registro</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_usuario">Username</string>
    <string name="txt_password">Password</string>
    <string name="btn_registro">Registrarse</string>
    <string name="Ranking">Ranking</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="eleccionDif">Elegir dificultad</string>
    <string name="dificultadFacil">Fácil</string>
    <string name="dificultadNormal">Normal</string>
    <string name="dificultadDificil">Difícil</string>
    <string name="jugar">Jugar</string>
    <string name="sonido">Sonido</string>
    <string name="sonidooff">Sonido Off</string>
    <string name="sonidoon">Sonido On</string>
    <string name="card"> </string>
    <string name="back">Atras</string>
    <string name="end">Fin del Juego</string>
    <string name="points">Puntaje: </string>
    <string name="difficulty">Dificultad: </string>
    <string name="errors">Errores: </string>
    <string name="timeGame">Tiempo: </string>
    <string name="dificultad">Dificultad</string>
    <string name="puntaje">Puntaje</string>
    <string name="norecord">¡No superaste tu Record!</string>
    <string name="record">¡Superaste tu Record!</string>
    <string name="descripcionFacil">Tablero: 4 x 3\nVidas: ∞</string>
    <string name="descripcionNormal">Tablero: 4 x 5\nVidas: 6</string>
    <string name="descripcionDificil">Tablero: 4 x 6\nVidas: 4</string>
    <string name="gameOver">¡GAME OVER!</string>
</resources>