<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRegisterM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF6E40"
        android:text="@string/btn_registro"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF6E40"
        android:text="@string/btn_ingresar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_password"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/main"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imgIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/intro"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tittleMain"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:autoSizeMinTextSize="35sp"
        android:autoSizeStepGranularity="20sp"
        android:autoSizeTextType="uniform"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFD740"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_username"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="#80FFFFFF"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittleMain"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#000000"
            android:hint="@string/txt_usuario"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_password"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="#80FFFFFF"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_username"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#000000"
            android:hint="@string/txt_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imgLoading"
        android:layout_width="195dp"
        android:layout_height="206dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/loading"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIntro"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>